fix: increased z-index of calendar in datePicker

--- a/src/components/inputs/DatePicker/datepicker.scss
+++ b/src/components/inputs/DatePicker/datepicker.scss
@@ -125,6 +125,10 @@
     }
   }
 
+  .react-datepicker-popper {
+    z-index: 20;
+  }
+
   .react-datepicker {
     width: 282px;
   }
